--- a/admin.html
+++ b/admin.html
@@ -89,6 +89,24 @@
       <p>&copy; 2023 EliteLogos. All rights reserved.</p>
     </div>
   </footer>
+<!-- Firebase App (core SDK) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<!-- Firebase Realtime Database -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+    authDomain: "thelogobucket-6389b.firebaseapp.com",
+    databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
+    projectId: "thelogobucket-6389b",
+    storageBucket: "thelogobucket-6389b.firebasestorage.app",
+    messagingSenderId: "237466771183",
+    appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
+</script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
   <script>
@@ -129,26 +147,31 @@
     const galleryGrid = document.getElementById("galleryGrid");
 
     // Load logos from localStorage and display preview
-    function loadLogos() {
-      galleryGrid.innerHTML = "";
-      const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
-      if (logos.length === 0) {
-        galleryGrid.innerHTML = '<p class="text-gray-400">No logos added yet.</p>';
-        return;
-      }
-      logos.forEach(({ title, image, category }, index) => {
-        const div = document.createElement("div");
-        div.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
-        div.innerHTML = `
-          <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
-          <div class="p-4">
-            <h3 class="text-xl font-bold mb-2">${title}</h3>
-            <p class="text-gray-300 mb-2">${category}</p>
-            <button data-index="${index}" class="delete-btn bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">Delete</button>
-          </div>
-        `;
-        galleryGrid.appendChild(div);
-      });
+   addLogoForm.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const title = document.getElementById("logoTitle").value.trim();
+  const imageFile = document.getElementById("logoImage").files[0];
+  const category = document.getElementById("logoCategory").value;
+
+  if (!title || !imageFile || !category) {
+    alert("Please fill all fields.");
+    return;
+  }
+
+  try {
+    const imageBase64 = await fileToBase64(imageFile);
+    const newLogoRef = database.ref("logos").push();
+    await newLogoRef.set({ title, image: imageBase64, category });
+
+    loadLogos();
+    addLogoForm.reset();
+    alert("Logo added successfully!");
+  } catch (error) {
+    alert("Error uploading logo.");
+    console.error(error);
+  }
+});
+
 
       // Attach delete handlers
       document.querySelectorAll(".delete-btn").forEach((btn) => {
@@ -203,7 +226,44 @@
     });
 
     // Initial load
+    function loadLogos() {
+  galleryGrid.innerHTML = "";
+  database.ref("logos").once("value", (snapshot) => {
+    const logos = snapshot.val();
+    if (!logos) {
+      galleryGrid.innerHTML = '<p class="text-gray-400">No logos added yet.</p>';
+      return;
+    }
+    Object.entries(logos).forEach(([key, { title, image, category }]) => {
+      const div = document.createElement("div");
+      div.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+      div.innerHTML = `
+        <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
+        <div class="p-4">
+          <h3 class="text-xl font-bold mb-2">${title}</h3>
+          <p class="text-gray-300 mb-2">${category}</p>
+          <button data-key="${key}" class="delete-btn bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">Delete</button>
+        </div>
+      `;
+      galleryGrid.appendChild(div);
+    });
+
+    // Attach delete handlers
+    document.querySelectorAll(".delete-btn").forEach((btn) => {
+      btn.addEventListener("click", (e) => {
+        const key = e.target.getAttribute("data-key");
+        deleteLogo(key);
+      });
+    });
+  });
+}
+
+function deleteLogo(key) {
+  database.ref("logos/" + key).remove().then(() => {
     loadLogos();
+  });
+}
+
   </script>
 </body>
 </html>
