--- a/gallery.html
+++ b/gallery.html
@@ -64,6 +64,20 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <!-- Firebase Realtime Database -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+    authDomain: "thelogobucket-6389b.firebaseapp.com",
+    databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
+    projectId: "thelogobucket-6389b",
+    storageBucket: "thelogobucket-6389b.firebasestorage.app",
+    messagingSenderId: "237466771183",
+    appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
+</script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
   <script>
@@ -106,7 +120,29 @@
       });
     }
 
-    loadLogos();
+    function loadLogos() {
+  galleryGrid.innerHTML = "";
+  database.ref("logos").once("value", (snapshot) => {
+    const logos = snapshot.val();
+    if (!logos) {
+      galleryGrid.innerHTML = '<p class="text-gray-400">No logos found.</p>';
+      return;
+    }
+    Object.values(logos).forEach(({ title, image, category }) => {
+      const div = document.createElement("div");
+      div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+      div.innerHTML = `
+        <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
+        <div class="p-4">
+          <h3 class="text-xl font-bold mb-2">${title}</h3>
+          <p class="text-gray-300 mb-2">${category}</p>
+        </div>
+      `;
+      galleryGrid.appendChild(div);
+    });
+  });
+}
+
   </script>
 </body>
 </html>
