--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gallery | EliteLogos</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <style>
     body {
       background-color: #000;
@@ -20,33 +22,11 @@
   </style>
 </head>
 <body class="min-h-screen p-6">
-  <!-- Navbar -->
-  <nav class="bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg">
+  <nav class="bg-black text-white py-4 px-6 fixed w-full z-40 shadow-lg">
     <div class="container mx-auto flex justify-between items-center">
       <a href="index.html" class="text-2xl font-bold">
         <span class="text-white">Elite</span><span class="text-gray-300">Logos</span>
       </a>
-      <div class="hidden md:flex space-x-8">
-        <a href="index.html" class="hover:text-gray-300 transition-colors">Home</a>
-        <a href="gallery.html" class="hover:text-gray-300 transition-colors font-bold">Gallery</a>
-        <a href="services.html" class="hover:text-gray-300 transition-colors">Services</a>
-        <a href="about.html" class="hover:text-gray-300 transition-colors">About</a>
-        <a href="contact.html" class="hover:text-gray-300 transition-colors">Contact</a>
-        <a href="admin.html" class="hover:text-gray-300 transition-colors">Admin</a>
-      </div>
-      <button class="md:hidden text-2xl" id="menu-toggle">
-        <i class="fas fa-bars" id="menu-icon"></i>
-      </button>
-    </div>
-    <div class="hidden md:hidden bg-black bg-opacity-90 absolute w-full left-0 top-16 px-6 pb-4" id="mobile-menu">
-      <div class="flex flex-col space-y-4 mt-4" id="mobile-nav-items">
-        <a href="index.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Home</a>
-        <a href="gallery.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Gallery</a>
-        <a href="services.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Services</a>
-        <a href="about.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">About</a>
-        <a href="contact.html" class="hover:text-gray-300 transition-colors pb-2">Contact</a>
-        <a href="admin.html" class="hover:text-gray-300 transition-colors">Admin</a>
-      </div>
     </div>
   </nav>
 
@@ -61,48 +41,48 @@
     </div>
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
   <script>
-    // Mobile menu toggle
-    const menuToggle = document.getElementById("menu-toggle");
-    const mobileMenu = document.getElementById("mobile-menu");
-    const menuIcon = document.getElementById("menu-icon");
+    const firebaseConfig = {
+      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+      authDomain: "thelogobucket-6389b.firebaseapp.com",
+      databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
+      projectId: "thelogobucket-6389b",
+      storageBucket: "thelogobucket-6389b.appspot.com",
+      messagingSenderId: "237466771183",
+      appId: "1:237466771183:web:4984a3b31ff5f266c4451a",
+      measurementId: "G-L9FHS6DB01"
+    };
 
-    if (menuToggle && mobileMenu && menuIcon) {
-      menuToggle.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-        if (mobileMenu.classList.contains("hidden")) {
-          menuIcon.classList.replace("fa-times", "fa-bars");
-        } else {
-          menuIcon.classList.replace("fa-bars", "fa-times");
-        }
-      });
-    }
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
 
     const galleryGrid = document.getElementById("galleryGrid");
 
-    function loadLogos() {
+    function loadGallery() {
       galleryGrid.innerHTML = "";
-      const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
-      if (logos.length === 0) {
-        galleryGrid.innerHTML = '<p class="text-gray-400">No logos found.</p>';
-        return;
-      }
-      logos.forEach(({ title, image, category }) => {
-        const div = document.createElement("div");
-        div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
-        div.innerHTML = `
-          <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
-          <div class="p-4">
-            <h3 class="text-xl font-bold mb-2">${title}</h3>
-            <p class="text-gray-300 mb-2">${category}</p>
-          </div>
-        `;
-        galleryGrid.appendChild(div);
+      database.ref("logos").on("value", (snapshot) => {
+        const logos = snapshot.val();
+        if (!logos) {
+          galleryGrid.innerHTML = '<p class="text-gray-400">No logos found.</p>';
+          return;
+        }
+        galleryGrid.innerHTML = "";
+        Object.values(logos).forEach(({ title, image, category }) => {
+          const div = document.createElement("div");
+          div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+          div.innerHTML = `
+            <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
+            <div class="p-4">
+              <h3 class="text-xl font-bold mb-2">${title}</h3>
+              <p class="text-gray-300 mb-2">${category}</p>
+            </div>
+          `;
+          galleryGrid.appendChild(div);
+        });
       });
     }
 
-    loadLogos();
+    loadGallery();
   </script>
 </body>
 </html>
