--- a/gallery.html
+++ b/gallery.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gallery | EliteLogos</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Tailwind CSS (safe static version) -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
   <style>
     body {
       background-color: #000;
@@ -22,7 +27,9 @@
   </style>
 </head>
 <body class="min-h-screen p-6">
-  <nav class="bg-black text-white py-4 px-6 fixed w-full z-40 shadow-lg">
+
+  <!-- Navbar -->
+  <nav class="bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg">
     <div class="container mx-auto flex justify-between items-center">
       <a href="index.html" class="text-2xl font-bold">
         <span class="text-white">Elite</span><span class="text-gray-300">Logos</span>
@@ -30,11 +37,13 @@
     </div>
   </nav>
 
+  <!-- Main -->
   <main class="pt-24 container mx-auto px-6">
     <h1 class="text-3xl font-bold mb-6">Logo Gallery</h1>
     <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
   </main>
 
+  <!-- Footer -->
   <footer class="bg-black text-white py-6 mt-12">
     <div class="container mx-auto text-center">
       <p>&copy; 2023 EliteLogos. All rights reserved.</p>
@@ -49,8 +58,7 @@
       projectId: "thelogobucket-6389b",
       storageBucket: "thelogobucket-6389b.appspot.com",
       messagingSenderId: "237466771183",
-      appId: "1:237466771183:web:4984a3b31ff5f266c4451a",
-      measurementId: "G-L9FHS6DB01"
+      appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
     };
 
     firebase.initializeApp(firebaseConfig);
@@ -59,14 +67,16 @@
     const galleryGrid = document.getElementById("galleryGrid");
 
     function loadGallery() {
-      galleryGrid.innerHTML = "";
-      database.ref("logos").on("value", (snapshot) => {
+      galleryGrid.innerHTML = "<p class='text-gray-400'>Loading logos...</p>";
+      database.ref("logos").once("value").then(snapshot => {
         const logos = snapshot.val();
+        galleryGrid.innerHTML = "";
+
         if (!logos) {
-          galleryGrid.innerHTML = '<p class="text-gray-400">No logos found.</p>';
+          galleryGrid.innerHTML = "<p class='text-gray-400'>No logos available yet.</p>";
           return;
         }
-        galleryGrid.innerHTML = "";
+
         Object.values(logos).forEach(({ title, image, category }) => {
           const div = document.createElement("div");
           div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
@@ -74,11 +84,14 @@
             <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
             <div class="p-4">
               <h3 class="text-xl font-bold mb-2">${title}</h3>
-              <p class="text-gray-300 mb-2">${category}</p>
+              <p class="text-gray-300">${category}</p>
             </div>
           `;
           galleryGrid.appendChild(div);
         });
+      }).catch(error => {
+        galleryGrid.innerHTML = "<p class='text-red-400'>Failed to load gallery.</p>";
+        console.error(error);
       });
     }
 
