--- a/admin.html
+++ b/admin.html
@@ -31,54 +31,33 @@
   <div id="status" class="mt-4 text-green-400"></div>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
-      authDomain: "thelogobucket-6389b.firebaseapp.com",
-      databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
-      projectId: "thelogobucket-6389b",
-      storageBucket: "thelogobucket-6389b.appspot.com",
-      messagingSenderId: "237466771183",
-      appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
-    };
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  status.textContent = "Uploading...";
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+  const title = document.getElementById("logoTitle").value.trim();
+  const imageFile = document.getElementById("logoImage").files[0];
+  const category = document.getElementById("logoCategory").value;
 
-    const form = document.getElementById("addLogoForm");
-    const status = document.getElementById("status");
+  if (!title || !imageFile || !category) {
+    alert("All fields are required.");
+    return;
+  }
 
-    function fileToBase64(file) {
-      return new Promise((resolve, reject) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.onerror = err => reject(err);
-        reader.readAsDataURL(file);
-      });
-    }
+  try {
+    const base64 = await fileToBase64(imageFile);
+    const ref = db.ref("logos");
+    const result = await ref.push({ title, category, image: base64 });
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      status.textContent = "Uploading...";
+    console.log("Upload success:", result.key);  // ✅ Debug line
+    form.reset();
+    status.textContent = "✅ Logo added successfully!";
+  } catch (err) {
+    console.error("❌ Error adding logo:", err);  // ✅ Show full error
+    status.textContent = "❌ Error adding logo: " + err.message;
+  }
+});
 
-      const title = document.getElementById("logoTitle").value.trim();
-      const imageFile = document.getElementById("logoImage").files[0];
-      const category = document.getElementById("logoCategory").value;
-
-      if (!title || !imageFile || !category) {
-        alert("All fields are required.");
-        return;
-      }
-
-      try {
-        const base64 = await fileToBase64(imageFile);
-        await db.ref("logos").push({ title, category, image: base64 });
-        form.reset();
-        status.textContent = "✅ Logo added successfully!";
-      } catch (err) {
-        console.error("Error:", err);
-        status.textContent = "❌ Error adding logo.";
-      }
-    });
   </script>
 </body>
 </html>
