--- a/admin.html
+++ b/admin.html
@@ -1,63 +1,116 @@
+<!-- ============================ -->
+<!-- ✅ admin.html - FINAL CODE -->
+<!-- ============================ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>EliteLogos Admin</title>
-
-  <!-- Tailwind CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
-  <!-- Firebase SDK -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin | EliteLogos</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 </head>
-<body class="bg-black text-white p-6 font-sans">
-
-  <h1 class="text-3xl font-bold mb-6">Admin - Add Logo</h1>
+<body class="bg-black text-white font-sans min-h-screen p-6">
+  <h1 class="text-3xl font-bold mb-6">Admin Panel - Add Logo</h1>
 
   <form id="addLogoForm" class="space-y-4 max-w-md">
-    <input type="text" id="logoTitle" placeholder="Title" class="w-full p-2 rounded text-black" required />
-    <input type="file" id="logoImage" accept="image/*" class="w-full p-2 rounded text-black" required />
-    <select id="logoCategory" class="w-full p-2 rounded text-black" required>
+    <input id="logoTitle" type="text" placeholder="Logo Title" required class="w-full p-2 text-black rounded" />
+    <input id="logoImage" type="file" accept="image/*" required class="w-full p-2 text-white" />
+    <select id="logoCategory" required class="w-full p-2 text-black rounded">
       <option value="" disabled selected>Select Category</option>
       <option value="Corporate">Corporate</option>
       <option value="Personal">Personal</option>
       <option value="Retail">Retail</option>
     </select>
-    <button type="submit" class="bg-yellow-400 text-black px-4 py-2 rounded hover:bg-yellow-500">Add Logo</button>
+    <button type="submit" class="bg-yellow-400 text-black px-4 py-2 rounded">Add Logo</button>
   </form>
 
-  <div id="status" class="mt-4 text-green-400"></div>
+  <div class="mt-6">
+    <h2 class="text-2xl font-semibold mb-4">Gallery Preview</h2>
+    <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-4"></div>
+  </div>
 
   <script>
-form.addEventListener("submit", async (e) => {
-  e.preventDefault();
-  status.textContent = "Uploading...";
+    const firebaseConfig = {
+      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+      authDomain: "thelogobucket-6389b.firebaseapp.com",
+      databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
+      projectId: "thelogobucket-6389b",
+      storageBucket: "thelogobucket-6389b.appspot.com",
+      messagingSenderId: "237466771183",
+      appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
+    };
 
-  const title = document.getElementById("logoTitle").value.trim();
-  const imageFile = document.getElementById("logoImage").files[0];
-  const category = document.getElementById("logoCategory").value;
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
 
-  if (!title || !imageFile || !category) {
-    alert("All fields are required.");
-    return;
-  }
+    const form = document.getElementById("addLogoForm");
+    const galleryGrid = document.getElementById("galleryGrid");
 
-  try {
-    const base64 = await fileToBase64(imageFile);
-    const ref = db.ref("logos");
-    const result = await ref.push({ title, category, image: base64 });
+    function fileToBase64(file) {
+      return new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result);
+        reader.onerror = (error) => reject(error);
+        reader.readAsDataURL(file);
+      });
+    }
 
-    console.log("Upload success:", result.key);  // ✅ Debug line
-    form.reset();
-    status.textContent = "✅ Logo added successfully!";
-  } catch (err) {
-    console.error("❌ Error adding logo:", err);  // ✅ Show full error
-    status.textContent = "❌ Error adding logo: " + err.message;
-  }
-});
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const title = document.getElementById("logoTitle").value.trim();
+      const imageFile = document.getElementById("logoImage").files[0];
+      const category = document.getElementById("logoCategory").value;
 
+      if (!title || !imageFile || !category) {
+        alert("Please fill all fields.");
+        return;
+      }
+
+      try {
+        const imageBase64 = await fileToBase64(imageFile);
+        await db.ref("logos").push({ title, image: imageBase64, category });
+        form.reset();
+      } catch (err) {
+        alert("Upload failed: " + err.message);
+      }
+    });
+
+    function loadLogos() {
+      db.ref("logos").on("value", (snapshot) => {
+        const data = snapshot.val();
+        galleryGrid.innerHTML = "";
+        if (!data) {
+          galleryGrid.innerHTML = '<p class="text-gray-400">No logos yet.</p>';
+          return;
+        }
+
+        Object.entries(data).forEach(([key, { title, image, category }]) => {
+          const div = document.createElement("div");
+          div.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+          div.innerHTML = `
+            <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
+            <div class="p-4">
+              <h3 class="text-xl font-bold mb-1">${title}</h3>
+              <p class="text-gray-300 mb-2">${category}</p>
+              <button data-key="${key}" class="delete-btn bg-red-500 text-white px-3 py-1 rounded">Delete</button>
+            </div>
+          `;
+          galleryGrid.appendChild(div);
+        });
+
+        document.querySelectorAll(".delete-btn").forEach(btn => {
+          btn.addEventListener("click", (e) => {
+            const key = e.target.getAttribute("data-key");
+            db.ref("logos/" + key).remove();
+          });
+        });
+      });
+    }
+
+    loadLogos();
   </script>
 </body>
 </html>
