--- a/gallery.html
+++ b/gallery.html
@@ -1,54 +1,20 @@
+<!-- ============================ -->
+<!-- ✅ gallery.html - FINAL CODE -->
+<!-- ============================ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gallery | EliteLogos</title>
-
-  <!-- Tailwind CSS (safe static version) -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
-  <!-- Firebase SDK -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
-  <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: 'Montserrat', sans-serif;
-    }
-    .gallery-item {
-      transition: transform 0.2s ease;
-    }
-    .gallery-item:hover {
-      transform: scale(1.05);
-    }
-  </style>
 </head>
-<body class="min-h-screen p-6">
-
-  <!-- Navbar -->
-  <nav class="bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg">
-    <div class="container mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold">
-        <span class="text-white">Elite</span><span class="text-gray-300">Logos</span>
-      </a>
-    </div>
-  </nav>
-
-  <!-- Main -->
-  <main class="pt-24 container mx-auto px-6">
-    <h1 class="text-3xl font-bold mb-6">Logo Gallery</h1>
-    <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-black text-white py-6 mt-12">
-    <div class="container mx-auto text-center">
-      <p>&copy; 2023 EliteLogos. All rights reserved.</p>
-    </div>
-  </footer>
+<body class="bg-black text-white font-sans p-6 min-h-screen">
+  <h1 class="text-3xl font-bold mb-6">Logo Gallery</h1>
+  <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
 
   <script>
     const firebaseConfig = {
@@ -62,36 +28,30 @@
     };
 
     firebase.initializeApp(firebaseConfig);
-    const database = firebase.database();
-
+    const db = firebase.database();
     const galleryGrid = document.getElementById("galleryGrid");
 
     function loadGallery() {
-      galleryGrid.innerHTML = "<p class='text-gray-400'>Loading logos...</p>";
-      database.ref("logos").once("value").then(snapshot => {
-        const logos = snapshot.val();
+      db.ref("logos").on("value", (snapshot) => {
+        const data = snapshot.val();
         galleryGrid.innerHTML = "";
-
-        if (!logos) {
-          galleryGrid.innerHTML = "<p class='text-gray-400'>No logos available yet.</p>";
+        if (!data) {
+          galleryGrid.innerHTML = '<p class="text-gray-400">No logos available.</p>';
           return;
         }
 
-        Object.values(logos).forEach(({ title, image, category }) => {
+        Object.values(data).forEach(({ title, image, category }) => {
           const div = document.createElement("div");
-          div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+          div.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
           div.innerHTML = `
             <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
             <div class="p-4">
-              <h3 class="text-xl font-bold mb-2">${title}</h3>
+              <h3 class="text-xl font-bold mb-1">${title}</h3>
               <p class="text-gray-300">${category}</p>
             </div>
           `;
           galleryGrid.appendChild(div);
         });
-      }).catch(error => {
-        galleryGrid.innerHTML = "<p class='text-red-400'>Failed to load gallery.</p>";
-        console.error(error);
       });
     }
 
