--- a/admin.html
+++ b/admin.html
@@ -102,15 +102,14 @@ transform: scale(1.05);
 <script>
 // --- PART 1: FIREBASE INITIALIZATION ---
 const firebaseConfig = {
-    apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
-    authDomain: "thelogobucket-6389b.firebaseapp.com",
-    databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
-    projectId: "thelogobucket-6389b",
-    storageBucket: "thelogobucket-6389b.firebasestorage.app", // <-- NOTE: Ensure this is correct in your Firebase console
-    messagingSenderId: "237466771183",
-    appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
-};
-firebase.initializeApp(firebaseConfig);
+    apiKey: "AIzaSyAFLAxss6pIe5I6qIBHKkuPqA39a2QbF5Y",
+    authDomain: "elitelogos-gallery.firebaseapp.com",
+    projectId: "elitelogos-gallery",
+    storageBucket: "elitelogos-gallery.firebasestorage.app",
+    messagingSenderId: "359472953712",
+    appId: "1:359472953712:web:91fc67e1eb30062d90b7b5"
+  };
+firebase.initializeApp(firebaseConfig); 
 
 // Get references to Firebase services
 const database = firebase.database();
