--- a/admin.html
+++ b/admin.html
@@ -117,7 +117,7 @@ const logosRef = database.ref('logos');
 
 
 // --- PART 2: CLOUDINARY CONFIGURATION ---
-const CLOUDINARY_CLOUD_NAME = "your_cloud_name_here"; // <-- PASTE YOUR CLOUD NAME
+const CLOUDINARY_CLOUD_NAME = "dljgmtij7"; // <-- PASTE YOUR CLOUD NAME
 const CLOUDINARY_UPLOAD_PRESET = "unsigned_logos"; // <-- PASTE YOUR UPLOAD PRESET NAME
 const CLOUDINARY_URL = `https://api.cloudinary.com/v1_1/${CLOUDINARY_CLOUD_NAME}/image/upload`;
 
