--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
             
             <button class="md:hidden text-2xl" id="menu-toggle">
-                <i class="fas fa-bars"></i>
+               <i class="fas fa-bars" id="menu-icon"></i>
             </button>
         </div>
         
